// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageCodesTabWrapper renders renders empty results correctly 1`] = `
<div>
  <div
    class="row mt-4 mb-3 no-gutters"
  >
    <div
      class="col-12 col-xl-3 mb-3 mb-xl-0"
    >
      <h2>
        Overview
      </h2>
    </div>
    <div
      class="col-12 col-xl-4 mb-3 mb-xl-0"
    >
      <div
        class="pgn__searchfield d-flex"
      >
        <form
          class="d-flex align-items-center w-100"
          role="search"
        >
          <label
            class="m-0"
            for="pgn-searchfield-input-1"
          >
            <span
              class="sr-only"
            >
              search
            </span>
          </label>
          <input
            class="form-control"
            data-hj-suppress="true"
            id="pgn-searchfield-input-1"
            name="searchfield-input"
            placeholder="Search by email or code..."
            role="searchbox"
            type="text"
            value=""
          />
          <button
            class="btn"
            type="submit"
          >
            <span
              class="pgn__icon"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5Zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="sr-only"
            >
              submit search
            </span>
          </button>
        </form>
      </div>
    </div>
    <div
      class="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
    >
      <button
        class="mr-2 btn btn-link"
        type="button"
      >
        <span
          class="pgn__icon mr-2"
          data-testid="refresh-data"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m19 8-4 4h3c0 3.31-2.69 6-6 6a5.87 5.87 0 0 1-2.8-.7l-1.46 1.46A7.93 7.93 0 0 0 12 20c4.42 0 8-3.58 8-8h3l-4-4ZM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46A7.93 7.93 0 0 0 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6Z"
              fill="currentColor"
            />
          </svg>
        </span>
        Refresh data
      </button>
      <a
        class="request-codes-btn btn btn-primary"
        href="/test-enterprise-slug/admin/coupons/request-codes"
      >
        <span
          class="pgn__icon"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Request more codes
      </a>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="pgn-transition-replace-group position-relative"
      />
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="fade alert-content alert alert-warning show"
        role="alert"
      >
        <span
          class="pgn__icon alert-icon"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
              fill="currentColor"
              xmlns="http://www.w3.org/2000/svg"
            />
          </svg>
        </span>
        <div
          class="pgn__alert-message-wrapper"
        >
          <div
            class="alert-message-content"
          >
            There are no results.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManageCodesTabWrapper renders renders error state correctly 1`] = `
<div>
  <div
    class="row mt-4 mb-3 no-gutters"
  >
    <div
      class="col-12 col-xl-3 mb-3 mb-xl-0"
    >
      <h2>
        Overview
      </h2>
    </div>
    <div
      class="col-12 col-xl-4 mb-3 mb-xl-0"
    >
      <div
        class="pgn__searchfield d-flex"
      >
        <form
          class="d-flex align-items-center w-100"
          role="search"
        >
          <label
            class="m-0"
            for="pgn-searchfield-input-4"
          >
            <span
              class="sr-only"
            >
              search
            </span>
          </label>
          <input
            class="form-control"
            data-hj-suppress="true"
            id="pgn-searchfield-input-4"
            name="searchfield-input"
            placeholder="Search by email or code..."
            role="searchbox"
            type="text"
            value=""
          />
          <button
            class="btn"
            type="submit"
          >
            <span
              class="pgn__icon"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5Zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="sr-only"
            >
              submit search
            </span>
          </button>
        </form>
      </div>
    </div>
    <div
      class="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
    >
      <button
        class="mr-2 btn btn-link"
        type="button"
      >
        <span
          class="pgn__icon mr-2"
          data-testid="refresh-data"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m19 8-4 4h3c0 3.31-2.69 6-6 6a5.87 5.87 0 0 1-2.8-.7l-1.46 1.46A7.93 7.93 0 0 0 12 20c4.42 0 8-3.58 8-8h3l-4-4ZM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46A7.93 7.93 0 0 0 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6Z"
              fill="currentColor"
            />
          </svg>
        </span>
        Refresh data
      </button>
      <a
        class="request-codes-btn btn btn-primary"
        href="/test-enterprise-slug/admin/coupons/request-codes"
      >
        <span
          class="pgn__icon"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Request more codes
      </a>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="pgn-transition-replace-group position-relative"
      />
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="fade alert-content alert alert-danger show"
        role="alert"
      >
        <span
          class="pgn__icon alert-icon"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 15h-2v-6h2v6Zm0-8h-2V7h2v2Z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          class="pgn__alert-message-wrapper"
        >
          <div
            class="alert-message-content"
          >
            <div
              class="alert-heading h4"
            >
              Unable to load coupons
            </div>
            <p>
              Try refreshing your screen (
              test error
              )
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManageCodesTabWrapper renders renders loading state correctly 1`] = `
<div>
  <div
    class="row mt-4 mb-3 no-gutters"
  >
    <div
      class="col-12 col-xl-3 mb-3 mb-xl-0"
    >
      <h2>
        Overview
      </h2>
    </div>
    <div
      class="col-12 col-xl-4 mb-3 mb-xl-0"
    >
      <div
        class="pgn__searchfield d-flex"
      >
        <form
          class="d-flex align-items-center w-100"
          role="search"
        >
          <label
            class="m-0"
            for="pgn-searchfield-input-3"
          >
            <span
              class="sr-only"
            >
              search
            </span>
          </label>
          <input
            class="form-control"
            data-hj-suppress="true"
            id="pgn-searchfield-input-3"
            name="searchfield-input"
            placeholder="Search by email or code..."
            role="searchbox"
            type="text"
            value=""
          />
          <button
            class="btn"
            type="submit"
          >
            <span
              class="pgn__icon"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5Zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="sr-only"
            >
              submit search
            </span>
          </button>
        </form>
      </div>
    </div>
    <div
      class="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
    >
      <button
        class="mr-2 btn btn-link"
        disabled=""
        type="button"
      >
        <span
          class="pgn__icon mr-2"
          data-testid="refresh-data"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m19 8-4 4h3c0 3.31-2.69 6-6 6a5.87 5.87 0 0 1-2.8-.7l-1.46 1.46A7.93 7.93 0 0 0 12 20c4.42 0 8-3.58 8-8h3l-4-4ZM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46A7.93 7.93 0 0 0 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6Z"
              fill="currentColor"
            />
          </svg>
        </span>
        Refresh data
      </button>
      <a
        class="request-codes-btn btn btn-primary"
        href="/test-enterprise-slug/admin/coupons/request-codes"
      >
        <span
          class="pgn__icon"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Request more codes
      </a>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="pgn-transition-replace-group position-relative"
      />
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="loading d-flex align-items-center justify-content-center coupons mt-3"
        data-testid="loading-message"
      >
        Loading...
        <span
          class="sr-only"
        >
          Loading
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManageCodesTabWrapper renders renders non-empty results correctly 1`] = `
<div>
  <div
    class="row mt-4 mb-3 no-gutters"
  >
    <div
      class="col-12 col-xl-3 mb-3 mb-xl-0"
    >
      <h2>
        Overview
      </h2>
    </div>
    <div
      class="col-12 col-xl-4 mb-3 mb-xl-0"
    >
      <div
        class="pgn__searchfield d-flex"
      >
        <form
          class="d-flex align-items-center w-100"
          role="search"
        >
          <label
            class="m-0"
            for="pgn-searchfield-input-2"
          >
            <span
              class="sr-only"
            >
              search
            </span>
          </label>
          <input
            class="form-control"
            data-hj-suppress="true"
            id="pgn-searchfield-input-2"
            name="searchfield-input"
            placeholder="Search by email or code..."
            role="searchbox"
            type="text"
            value=""
          />
          <button
            class="btn"
            type="submit"
          >
            <span
              class="pgn__icon"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5Zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="sr-only"
            >
              submit search
            </span>
          </button>
        </form>
      </div>
    </div>
    <div
      class="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
    >
      <button
        class="mr-2 btn btn-link"
        type="button"
      >
        <span
          class="pgn__icon mr-2"
          data-testid="refresh-data"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m19 8-4 4h3c0 3.31-2.69 6-6 6a5.87 5.87 0 0 1-2.8-.7l-1.46 1.46A7.93 7.93 0 0 0 12 20c4.42 0 8-3.58 8-8h3l-4-4ZM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46A7.93 7.93 0 0 0 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6Z"
              fill="currentColor"
            />
          </svg>
        </span>
        Refresh data
      </button>
      <a
        class="request-codes-btn btn btn-primary"
        href="/test-enterprise-slug/admin/coupons/request-codes"
      >
        <span
          class="pgn__icon"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Request more codes
      </a>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="pgn-transition-replace-group position-relative"
      />
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="coupon mb-3 mb-lg-2 rounded border"
      >
        <div
          aria-controls="coupon-details-0"
          aria-expanded="false"
          class="metadata row no-gutters p-2 d-flex align-items-center rounded"
          role="button"
          tabindex="0"
        >
          <div
            class="col-sm-12 col-lg-3 mb-2 mb-lg-0"
          >
            <small
              class="text-muted"
            >
              Coupon Name
            </small>
            <div>
              test-title-1
            </div>
          </div>
          <div
            class="col-sm-12 col-lg-4 mb-2 mb-lg-0"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="col"
              >
                <small
                  class="text-muted"
                >
                  Valid From
                </small>
                <div>
                  January 3, 2019
                </div>
              </div>
              <div
                class="col"
              >
                <small
                  class="text-muted"
                >
                  Valid To
                </small>
                <div>
                  September 18, 2019
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-sm-12 col-lg-4 mb-2 mb-lg-0"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="col"
              >
                <small
                  class="text-muted"
                >
                  Assignments Remaining
                </small>
                <div>
                  2
                </div>
              </div>
              <div
                class="col"
              >
                <small
                  class="text-muted"
                >
                  Enrollments Redeemed
                </small>
                <div>
                  2 of 10
                  <span
                    class="ml-1"
                  >
                    (20%)
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
          >
            <span
              class="pgn__icon d-inline-block text-primary"
            >
              <div
                data-testid="expand-more"
              />
              <span
                class="sr-only"
              >
                Open coupon details
              </span>
            </span>
          </div>
        </div>
        <div
          class="coupon-details row no-gutters px-2 my-3 d-none"
          id="coupon-details-0"
        >
          <div
            class="col"
          />
        </div>
      </div>
      <div
        class="coupon mb-3 mb-lg-2 rounded border"
      >
        <div
          aria-controls="coupon-details-1"
          aria-expanded="false"
          class="metadata row no-gutters p-2 d-flex align-items-center rounded"
          role="button"
          tabindex="0"
        >
          <div
            class="col-sm-12 col-lg-3 mb-2 mb-lg-0"
          >
            <small
              class="text-muted"
            >
              Coupon Name
            </small>
            <div>
              test-title-2
            </div>
          </div>
          <div
            class="col-sm-12 col-lg-4 mb-2 mb-lg-0"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="col"
              >
                <small
                  class="text-muted"
                >
                  Valid From
                </small>
                <div>
                  January 3, 2019
                </div>
              </div>
              <div
                class="col"
              >
                <small
                  class="text-muted"
                >
                  Valid To
                </small>
                <div>
                  September 18, 2019
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-sm-12 col-lg-4 mb-2 mb-lg-0"
          >
            <div
              class="row no-gutters"
            >
              <div
                class="col"
              >
                <small
                  class="text-muted"
                >
                  Assignments Remaining
                </small>
                <div>
                  2
                </div>
              </div>
              <div
                class="col"
              >
                <small
                  class="text-muted"
                >
                  Enrollments Redeemed
                </small>
                <div>
                  2 of 10
                  <span
                    class="ml-1"
                  >
                    (20%)
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
          >
            <span
              class="pgn__icon d-inline-block text-primary"
            >
              <div
                data-testid="expand-more"
              />
              <span
                class="sr-only"
              >
                Open coupon details
              </span>
            </span>
          </div>
        </div>
        <div
          class="coupon-details row no-gutters px-2 my-3 d-none"
          id="coupon-details-1"
        >
          <div
            class="col"
          />
        </div>
      </div>
      <div
        class="d-flex mt-4 justify-content-center"
      >
        <nav
          aria-label="coupons pagination"
          class="pagination-default"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            aria-relevant="text"
            class="sr-only"
          >
            Page 1, Current Page, of 1
          </div>
          <ul
            class="pagination"
          >
            <li
              class="page-item disabled"
            >
              <button
                aria-label="Previous"
                class="previous page-link btn btn-primary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div>
                  <span
                    class="pgn__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  Previous
                </div>
              </button>
            </li>
            <li
              class="page-item disabled"
            >
              <button
                aria-label="Next"
                class="next page-link btn btn-primary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div>
                  Next
                  <span
                    class="pgn__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
